Name:          Hubigraph
Version:       0.3
Homepage:      http://ooxo.org/hubigraph/
Synopsis:      A haskell wrap for Ubigraph
Category:      Network
License:       BSD3
License-file:  LICENSE
Author:        Kohei Ozaki
Maintainer:    Kohei Ozaki <eowner@gmail.com>
Cabal-Version: >= 1.2
build-type:    Simple

library
  Exposed-Modules: Hubigraph,
                   Hubigraph.Base,
                   Hubigraph.Old
  Build-Depends:   base >= 2.0, mtl >= 1.1.0.1, containers >= 0.2.0.0,
                   haxr >= 3000.1.1.1
